--- a/src/globalStylings.scss
+++ b/src/globalStylings.scss
@@ -77,7 +77,9 @@
 }
 
 .view-all-movie-container{
-    margin-bottom: 2em;
+    @media screen and (min-width: 992px){
+        margin-bottom: 4em;  
+    }
 }
 
 // movie details stylings for the movie component
@@ -105,6 +107,9 @@
     margin: 2em;
     display: flex;
     justify-content: center;
+    @media screen and (min-width: 992px){
+        margin: 5em;
+    }
 }
 
 .pagination-buttons{
@@ -119,35 +124,31 @@
 // stylings for the hero images of the movies
 .hero-image-container {
   background-size: cover !important;
-  background-position: center center !important;
+  background-position: center !important;
   width: 100%;
   height: 40vh;
   background-repeat: no-repeat;
   position: relative;
   animation: animateHeroimage 1s;
   @media screen and (min-width: 600px){
-    height: 300px;
-    }
-
-  @media screen and (min-width: 740px){
     height: 400px;
     }
 
+  @media screen and (min-width: 740px){
+    height: 600px;
+    }
+
   @media screen and (min-width: 992px){
-    height: 500px;
+    height: 730px;
     }
 
   @media screen and (min-width: 1200px){
-    height: 700px;
+    height: 970px;
     }
 
-    @media screen and (min-width: 1700px){
+  @media screen and (min-width: 1700px){
     height: 90vh;
     }
-
-    // @media screen and (min-width: 1900px){
-    // height: 100vh;
-    // }
 }
 
 @keyframes animateHeroimage {
